--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "date-fns": "^2.16.1",
+    "firebase-tools": "^10.3.0",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0",
     "formik-material-ui-lab": "^0.0.5",
